# numpy_neural_network

./: .gitignore  NeuralNet.py  README.md  activations.py  app.ipynb  main.ipynb  main.py  mypy.ini  pyproject.toml  requirements.txt  ruff.toml
